--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Andrew Kraut" />
+   <meta name="wot-verification" content="c37a752d93c53f2c0b49" />
    <link href="http://opie4624.github.com/atom.xml" rel="alternate" title="Andrew Kraut" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
