Added a bunch of post history

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div id="post">
+  <h1>{{ page.title }}</h1>
 {{ content }}
 </div>
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/opie4624github/embed.js"></script><noscript><a href="http://disqus.com/forums/opie4624github/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
