--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-12403750-1");
+var pageTracker = _gat._getTracker("UA-88574-4");
 pageTracker._trackPageview();
 </script>
 <script type="text/javascript">
