--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -69,7 +69,7 @@
               {% endif %}
               {% if site.author.googleplus %}
                 <li>
-                  <a href="https://profiles.google.com/{{ site.author.google }}" class="zocial googleplus icon" target="_blank">
+                  <a href="https://plus.google.com/{{ site.author.googleplus }}" class="zocial googleplus icon" target="_blank">
                     <span class="hidden-desktop">Google+</a>
                   </a>
                 </li>
