Use related and recent includes on posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,3 +3,8 @@ layout: default
 ---
 {% include JB/setup %}
 {% include themes/hooligan/post.html %}
+
+<hr width="30%">
+{% include related.html %}
+
+{% include recent.html %}
