Add a custom sharing provider for addthis

--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -49,6 +49,12 @@
           {% include JB/tags_list %}
         </ul>
       </section>
-    {% endunless %}         
+    {% endunless %} 
+    {% unless site.JB.sharing.provider == false %}        
+      <section>
+        <h4>Sharing</h4>
+        {% include JB/sharing %}
+      </section>
+    {% endunless %}
   </div>
 </div>
