Implement AddThis Greeting Bar on posts

--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -58,3 +58,10 @@
     {% endunless %}
   </div>
 </div>
+
+<!-- AddThis Welcome BEGIN -->
+<script type="text/javascript" src="//s7.addthis.com/js/250/addthis_widget.js#pubid=ra-505815861bfe53e2"></script>
+<script type='text/javascript'>
+addthis.bar.initialize({'default':{"backgroundColor":"#000000","buttonColor":"#098DF4","textColor":"#FFFFFF","buttonTextColor":"#FFFFFF","hideAfter":20},rules:[{"name":"Twitter","match":{"referringService":"twitter"},"message":"If you find this article helpful:","action":{"type":"button","text":"Tweet it!","verb":"share","service":"twitter"}},{"name":"Facebook","match":{"referringService":"facebook"},"message":"If you like this article, tell your friends about it:","action":{"type":"button","text":"Share on Facebook","verb":"share","service":"facebook"}},{"name":"Google","match":{"referrer":"google.com"},"message":"If you like this page, let Google know:","action":{"type":"button","text":"+1","verb":"share","service":"google_plusone_share"}},{"name":"reddit","match":{"referringService":"reddit"},"message":"If you enjoy this article, do me a favor:","action":{"type":"button","text":"Post on Reddit","verb":"share","service":"reddit"}},{"name":"digg","match":{"referringService":"digg"},"message":"If you enjoy this article, do me a favor:","action":{"type":"button","text":"Post on Digg","verb":"share","service":"digg"}},{"name":"evernote","match":{"referringService":"evernote"},"message":"If you enjoy this article, do me a favor:","action":{"type":"button","text":"Post on Evernote","verb":"share","service":"evernote"}}]});
+</script>
+<!-- AddThis Welcome END -->
