--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="span8">
-    {{ content }}
+    <div class="meat" > {{ content }} </div>
     <hr>
     <div class="pagination btn-group">
       {% if page.previous %}
